rusqlite_migration/src/tests/snapshots/rusqlite_migration__tests__core__error_source_number_foreign_key_check.snap
---
source: rusqlite_migration/src/tests/synch.rs
expression: e.source()
---
Some(
    ForeignKeyCheckError {
        table: "t1",
        rowid: 1,
        parent: "t2",
        fkid: 2,
    },
)
