rusqlite_migration/src/tests/snapshots/rusqlite_migration__tests__core__error_source_number_migration_definition.snap
---
source: rusqlite_migration/src/tests/synch.rs
expression: e.source()
---
Some(
    NoMigrationsDefined,
)
