rusqlite_migration/src/tests/snapshots/rusqlite_migration__tests__core__migration_hook_debug.snap
---
source: rusqlite_migration/src/tests/synch.rs
expression: m
---
M {
    up: "",
    up_hook: Some(
        MigrationHook(<closure>),
    ),
    down: None,
    down_hook: None,
    foreign_key_check: false,
    comment: None,
}
